--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "constants": "^0.0.2",
     "expo": "~47.0.12",
+    "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "ionicons": "^6.1.1",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-google-places-autocomplete": "^3.4.0",
     "react-native": "0.70.5",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.3.2",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-placesearch": "^4.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
